[package]
name = "klox_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "11.0.0"
phf = { version = "0.11", default-features = false,features = ["macros"] }
ordered-float = { version = "3.0", default-features = false }
derivative = "2.2.0"
